--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link href="./Resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
+    <div id="header">
       <h1 class="title">Broadway Design</h1>
         <ul class="nav">
-          <li>Home</li>
-          <li>About</li>
-          <li>Work</li>
-          <li>Team</li>
-          <li>Contact</li>
+          <li><a href="#">Home</a></li><br />
+          <li><a href="#">About</a></li><br />
+          <li><a href="#">Work</a></li><br />
+          <li><a href="#">Team</a></li><br />
+          <li><a href="#">Contact</a></li>
       </ul>
     </div>
 
