Final Commit Project Complete

--- a/index.html
+++ b/index.html
@@ -5,16 +5,70 @@
     <link href="./Resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+<!-- Header and Navigation -->
+
     <div id="header">
-      <h1 class="title">Broadway Design</h1>
-        <ul class="nav">
-          <li><a href="#">Home</a></li><br />
-          <li><a href="#">About</a></li><br />
-          <li><a href="#">Work</a></li><br />
-          <li><a href="#">Team</a></li><br />
-          <li><a href="#">Contact</a></li>
-      </ul>
+      <h1 id="title">Broadway Design</h1>
+        <p>
+          <a class="btn-nav" href="#">Home</a>
+        </p>
+        <p>
+          <a class="btn-nav" href="#">About</a>
+        </p>
+        <p>
+          <a class="btn-nav" href="#">Work</a>
+        </p>
+        <p>
+          <a class="btn-nav" href="#">Team</a>
+        </p>
+        <p>
+          <a class="btn-nav" href="#">Contact</a>
+        </p>
     </div>
 
+<!-- The Process -->
+
+    <div id="operation">
+      <h2 id="bodytitle">Our Process</h2>
+      <img src="./Resources/icons/identify.svg">
+        <h3 class="process">Identify</h3>
+          <p class="description">We focus on the most important details.</p>
+      <img src="./Resources/icons/understand.svg">
+        <h3 class="process">Understand</h3>
+          <p class="description">We study our projects inside and out.</p>
+      <img src="./Resources/icons/execute.svg">
+        <h3 class="process">Execute</h3>
+          <p class="description">We put everything we have into our work.</p>
+      </div>
+
+<!-- Divider -->
+
+  <div id="divider">
+      <h3 id="dividertitle">Designed In New York</h3>
+  </div>
+
+<!-- Credentials -->
+
+  <div id="credentials">
+    <h3 class="process">Portfolio</h3>
+      <p class="description">Coming Soon</p>
+    <h3 class="process">Team</h3>
+      <p class="description">We're Hiring!</p>
+    <h3 class="process">Contact</h3>
+      <p class="description">Phone: (555)-555-5555</p>
+      <p class="description">E-mail: test@example.com</p>
+      <p class="description">Twitter: @test</p>
+
+<!-- Footer with Navigation-->
+
+  <div id="footer">
+    <p id="footertext"> &copy; Broadway 2016
+      <a class="btn-nav" href="#">Home</a>
+      <a class="btn-nav" href="#">About</a>
+      <a class="btn-nav" href="#">Work</a>
+      <a class="btn-nav" href="#">Team</a>
+      <a class="btn-nav" href="#">Contact</a>
+    </p>
   </body>
 </html>
